src/objects/ErroredOrderLine__c.object
<CustomObject>
    <fields>
        <fullName>A_B_Copy_Split__c</fullName>
        <defaultValue>false</defaultValue>
        <label>A/B Copy Split</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ad_Unit_Code__c</fullName>
        <label>Ad Unit Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ad_Unit_Name__c</fullName>
        <label>Ad Unit Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allowances__c</fullName>
        <label>Allowances</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Baseprice__c</fullName>
        <label>Baseprice</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CCI_Order_Item_ID__c</fullName>
        <label>CCI Order Item ID</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCI_Package_Item_Id__c</fullName>
        <label>CCI Package Item Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCI_Schedule_Item_Id__c</fullName>
        <label>CCI Schedule Item Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancel_Date__c</fullName>
        <label>Cancel Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Canceled_Reason__c</fullName>
        <label>Canceled Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charges__c</fullName>
        <label>Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Colour__c</fullName>
        <label>Colour</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Columns__c</fullName>
        <label>Columns</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CopySplit__c</fullName>
        <label>CopySplit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dateflex__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dateflex</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discounts__c</fullName>
        <label>Discounts</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ErroredOrder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ErroredOrder</label>
        <referenceTo>ErroredOrder__c</referenceTo>
        <relationshipLabel>ErroredOrderLines (ErroredOrder)</relationshipLabel>
        <relationshipName>ErroredOrderLines1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>First_Delivery_Date__c</fullName>
        <label>First Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Height__c</fullName>
        <label>Height</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsCancelableOrderItem__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCancelableOrderItem</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Cancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Cancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Published__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Published</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Delivery_Date__c</fullName>
        <label>Last Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ListPrice__c</fullName>
        <label>ListPrice</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Media_Code__c</fullName>
        <label>Media Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Media_Name__c</fullName>
        <label>Media Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Module__c</fullName>
        <label>Module</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Line_ID__c</fullName>
        <label>Opportunity Line ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OrderId</label>
        <referenceTo>ErroredOrder__c</referenceTo>
        <relationshipLabel>ErroredOrderLines</relationshipLabel>
        <relationshipName>ErroredOrderLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Package_Code__c</fullName>
        <label>Package Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package_Name__c</fullName>
        <label>Package Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publication_Code__c</fullName>
        <label>Publication Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publication_Name__c</fullName>
        <label>Publication Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Regional_Copy_Split__c</fullName>
        <label>Regional Copy Split</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCC_Rate__c</fullName>
        <label>SCC Rate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_Code__c</fullName>
        <label>Section Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_Name__c</fullName>
        <label>Section Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceDate__c</fullName>
        <label>ServiceDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <label>Size</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_Code__c</fullName>
        <label>Title Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_Name__c</fullName>
        <label>Title Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalPrice__c</fullName>
        <label>TotalPrice</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UnitPrice__c</fullName>
        <label>UnitPrice</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Website_Code__c</fullName>
        <label>Website Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website_Name__c</fullName>
        <label>Website Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Yield__c</fullName>
        <label>Yield</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Zone_Code__c</fullName>
        <label>Zone Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zone_Name__c</fullName>
        <label>Zone Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ErroredOrderLine</label>
    <nameField>
        <label>ErroredOrderLine Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ErroredOrderLines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>